--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 1.3
+ * @version 1.4
 */
 
 .app-2CXKsg {
@@ -727,8 +727,8 @@
     background: none;
 }
 
-.text-xs-normal-3SiVjE[style*="color:"],
-.text-sm-normal-3Zj3Iv[style*="color:"] {
+.text-xs-normal-3O7EaX[style*="color:"],
+.text-sm-normal-AEQz4v[style*="color:"] {
     color: white !important;
 }
 
@@ -2958,7 +2958,7 @@
     background-color: transparent;
 }
 
-.text-md-normal-304U3g[style*="color:"],
+.text-md-normal-2rFCH3[style*="color:"],
 .optionHeader-27AHfD[style*="color:"] {
     color: white !important;
 }
@@ -3145,17 +3145,17 @@
 }
 
 .interactive-iyXY_x,
-.interactive-1vLZ_I {
+.interactive-26HRN_ {
     color: rgba(208, 223, 255, .3);
 }
 
-.interactive-1vLZ_I:focus-within, 
-.interactive-1vLZ_I:hover {
+.interactive-26HRN_:focus-within, 
+.interactive-26HRN_:hover {
     color: #e2e2e2;
     background-color: rgba(149, 168, 176, .2);
 }
 
-.selected-3veCBZ {
+.selected-26oxtA {
     background-color: #4B5569 !important;
 }
 
@@ -3932,8 +3932,8 @@
     background-color: transparent;
 }
 
-.text-md-normal-304U3g a,
-.text-sm-normal-3Zj3Iv a {
+.text-md-normal-2rFCH3 a,
+.text-sm-normal-AEQz4v a {
     color: #C5E384;
 }
 
@@ -4278,4 +4278,47 @@
 
 .theme-dark .keyboardShortcutsModal-2CRmCm {
     background-color: transparent;
+}
+
+.stageListenerPill-1_QAPA,
+.audienceIconContainer-1xndyK {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+
+.audienceIcon-2HoEJ2 {
+    color: white;
+}
+
+.textBadge-v9EW9y {
+    border: 4px solid transparent;
+}
+
+.container-3i3IzO {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.cta-1XhfrG {
+    color: #3ea6ff;
+}
+
+.checkIcon-3eAeN_, 
+.memberCount-2G9rxE {
+    border: 1px solid rgba(255, 255, 255, .2);
+    background-color: rgba(255, 255, 255, .2);
+}
+
+.optionButton-1W9f7G.selected-KQBgNS {
+    border: 2px solid black;
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.container-1jQZ2U {
+    box-shadow: none;
+    background-color: #282828;
+    border: 1px solid rgba(255, 255, 255, .1);
+}
+
+.hljs {
+    background: rgba(255,255,255,.12);
 }
