--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 1.5
+ * @version 1.6
 */
 
 /* Rem Main Picture */
@@ -69,7 +69,7 @@
     background-color: transparent;
 }
 
-.text-md-normal-304U3g[style*="color:"] {
+.text-md-normal-2rFCH3[style*="color:"] {
     color: white !important;
 }
 
@@ -610,7 +610,7 @@
     border-radius: 4px;
 }
 
-.text-xs-normal-3SiVjE[style*="color:"] {
+.text-xs-normal-3O7EaX[style*="color:"] {
     color: white !important;
 }
 
@@ -1295,17 +1295,17 @@
 }
 
 .interactive-iyXY_x,
-.interactive-1vLZ_I {
+.interactive-26HRN_ {
     color: white;
 }
 
-.interactive-1vLZ_I:focus-within, 
-.interactive-1vLZ_I:hover {
+.interactive-26HRN_:focus-within, 
+.interactive-26HRN_:hover {
     color: white;
     background-color: rgba(255, 255, 255, .1);
 }
 
-.selected-3veCBZ {
+.selected-26oxtA {
     color: white !important;
     background-color: #6cb4fe !important;
 }
@@ -2155,7 +2155,7 @@
     border: 3px solid #6cb4fe;
 }
 
-.text-sm-normal-3Zj3Iv[style*="color:"] {
+.text-sm-normal-AEQz4v[style*="color:"] {
     color: white !important;
 }
 
@@ -3674,8 +3674,8 @@
     background-color: transparent;
 }
 
-.text-md-normal-304U3g a,
-.text-sm-normal-3Zj3Iv a {
+.text-md-normal-2rFCH3 a,
+.text-sm-normal-AEQz4v a {
     color: #C5E384;
 }
 
@@ -4045,4 +4045,47 @@
 
 .theme-dark .keyboardShortcutsModal-2CRmCm {
     background-color: transparent;
+}
+
+.stageListenerPill-1_QAPA,
+.audienceIconContainer-1xndyK {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+
+.audienceIcon-2HoEJ2 {
+    color: white;
+}
+
+.textBadge-v9EW9y {
+    border: 4px solid transparent;
+}
+
+.container-3i3IzO {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.cta-1XhfrG {
+    color: #3ea6ff;
+}
+
+.checkIcon-3eAeN_, 
+.memberCount-2G9rxE {
+    border: 1px solid rgba(255, 255, 255, .2);
+    background-color: rgba(255, 255, 255, .2);
+}
+
+.optionButton-1W9f7G.selected-KQBgNS {
+    border: 2px solid black;
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.container-1jQZ2U {
+    box-shadow: none;
+    background-color: #282828;
+    border: 1px solid rgba(255, 255, 255, .1);
+}
+
+.hljs {
+    background: rgba(255,255,255,.12);
 }
