--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 1
+ * @version 1.1
 */
 
 .app-2CXKsg, 
@@ -272,7 +272,7 @@
     box-shadow: none;
 }
 
-.text-xs-normal-3SiVjE[style*="color:"] {
+.text-xs-normal-3O7EaX[style*="color:"] {
     color: white !important;
 }
 
@@ -1728,14 +1728,14 @@
     background-color: transparent;
 }
 
-.text-sm-normal-3Zj3Iv[style*="color:"],
+.text-sm-normal-AEQz4v[style*="color:"],
 .valueProp-1SDHQS[style*="color:"],
 .byline-l0pdeg[style*="color:"],
 .body-35bJ0S[style*="color:"] {
     color: #F1F1F1 !important;
 }
 
-.text-sm-normal-3Zj3Iv a,
+.text-sm-normal-AEQz4v a,
 .valueProp-1SDHQS a,
 .byline-l0pdeg a,
 .body-35bJ0S a {
@@ -2021,7 +2021,7 @@
     color: #0F0F0F !important;
 }
 
-.item-2idW98[aria-checked=true] .text-sm-normal-3Zj3Iv {
+.item-2idW98[aria-checked=true] .text-sm-normal-AEQz4v {
     font-weight: 600;
 }
 
@@ -2058,7 +2058,7 @@
     fill: #FF0000;
 }
 
-.addItemButton-Yt5S4N .text-md-normal-304U3g {
+.addItemButton-Yt5S4N .text-md-normal-2rFCH3 {
     color: #FF0000 !important;
     font-weight: 600;
 }
@@ -2553,9 +2553,9 @@
     fill: #0F0F0F;
 }
 
-.item-2idW98[aria-checked=true] .text-sm-normal-3Zj3Iv,
+.item-2idW98[aria-checked=true] .text-sm-normal-AEQz4v,
 .item-2idW98[aria-checked=true] .defaultColor-1EVLSt,
-.item-2idW98[aria-checked=true] .text-sm-normal-3Zj3Iv a {
+.item-2idW98[aria-checked=true] .text-sm-normal-AEQz4v a {
     color: #0F0F0F !important;
 }
 
@@ -2929,7 +2929,7 @@
     color: #3ea6ff;
 }
 
-.more-2c3Z-T .text-sm-normal-3Zj3Iv {
+.more-2c3Z-T .text-sm-normal-AEQz4v {
     font-weight: 600;
 }
 
@@ -3365,7 +3365,7 @@
     background-color: rgba(255, 255, 255, .2);
 }
 
-.text-md-normal-304U3g[style*="color:"],
+.text-md-normal-2rFCH3[style*="color:"],
 .optionHeader-27AHfD[style*="color:"] {
     color: #F1F1F1 !important;
 }
@@ -3644,15 +3644,15 @@
 }
 
 .interactiveSelected-29CP8y,
-.selected-3veCBZ {
+.selected-26oxtA {
     color: white !important;
 } 
 
-.selected-3veCBZ {
+.selected-26oxtA {
     background-color: #FF0000;
 }
 
-.interactive-1vLZ_I,
+.interactive-26HRN_,
 .interactive-iyXY_x {
     color: rgba(241, 241, 241, .5);
 }
@@ -3662,8 +3662,8 @@
     border-radius: 40px;
 }
 
-.interactive-1vLZ_I:focus-within, 
-.interactive-1vLZ_I:hover {
+.interactive-26HRN_:focus-within, 
+.interactive-26HRN_:hover {
     color: #F1F1F1;
     background-color: rgba(255, 255, 255, .1);
 }
@@ -4184,3 +4184,15 @@
 .featureBorder-2G0c_P {
     border-top: none;
 }
+
+.stageListenerPill-1_QAPA,
+.audienceIconContainer-1xndyK {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+
+.audienceIcon-2HoEJ2 {
+    color: white;
+}
+
+
