--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 3.8
+ * @version 3.9
  */
 
 /* Main Background */
@@ -29,9 +29,9 @@
     background-color: transparent;
 }
 
-.text-md-normal-304U3g,
-.text-xs-normal-3SiVjE,
-.text-sm-normal-3Zj3Iv {
+.text-md-normal-2rFCH3,
+.text-xs-normal-3O7EaX,
+.text-sm-normal-AEQz4v {
   color: white !important;
 }
 
@@ -980,7 +980,7 @@
     color: white;
 }
 
-.interactiveSelected-29CP8y, .interactive-1vLZ_I, .interactive-iyXY_x {
+.interactiveSelected-29CP8y, .interactive-26HRN_, .interactive-iyXY_x {
     color: white;
 }
 
@@ -990,12 +990,12 @@
     border-radius: 6px;
 }
 
-.selected-3veCBZ {
+.selected-26oxtA {
     background-color: transparent;
     background-image: -webkit-repeating-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 13%) !important;
 }
 
-.interactive-1vLZ_I:focus-within, .interactive-1vLZ_I:hover {
+.interactive-26HRN_:focus-within, .interactive-26HRN_:hover {
     color: white;
     background-color: rgba(17, 188, 204, 0.244);
 }
@@ -3664,8 +3664,8 @@
     background-color: transparent;
 }
 
-.text-md-normal-304U3g a,
-.text-sm-normal-3Zj3Iv a {
+.text-md-normal-2rFCH3 a,
+.text-sm-normal-AEQz4v a {
     color: #C5E384;
 }
 
@@ -4026,8 +4026,48 @@
     background-color: transparent;
 }
 
+.stageListenerPill-1_QAPA,
+.audienceIconContainer-1xndyK {
+    background-color: rgba(0, 0, 0, .2);
+}
 
 
+.audienceIcon-2HoEJ2 {
+    color: white;
+}
+
+.textBadge-v9EW9y {
+    border: 4px solid transparent;
+}
+
+.container-3i3IzO {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.cta-1XhfrG {
+    color: #3ea6ff;
+}
+
+.checkIcon-3eAeN_, 
+.memberCount-2G9rxE {
+    border: 1px solid rgba(255, 255, 255, .2);
+    background-color: rgba(255, 255, 255, .2);
+}
+
+.optionButton-1W9f7G.selected-KQBgNS {
+    border: 2px solid black;
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.container-1jQZ2U {
+    box-shadow: none;
+    background-color: #282828;
+    border: 1px solid rgba(255, 255, 255, .1);
+}
+
+.hljs {
+    background: rgba(255,255,255,.12);
+}
 /* Main Color */
 .main-color{color: #2AB;}
 
