--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 3.8
+ * @version 3.9
  */
 
  #app-mount .app-2CXKsg {
@@ -2460,9 +2460,9 @@
   background-color: transparent;
 }
 
-.text-md-normal-304U3g,
-.text-xs-normal-3SiVjE,
-.text-sm-normal-3Zj3Iv {
+.text-md-normal-2rFCH3,
+.text-xs-normal-3O7EaX,
+.text-sm-normal-AEQz4v {
   color: white !important;
 }
 
@@ -2749,7 +2749,7 @@
 
 .selected-1-Z6gm .layout-1qmrhw,
 .categoryItem-Kc_HK_.selectedCategoryItem-ZjqSui .itemInner-3e_4G4,
-.selected-3veCBZ {
+.selected-26oxtA {
   background-color: rgba(155, 39, 66, .81) !important;
 }
 
@@ -2757,8 +2757,8 @@
   color: white;
 }
 
-.interactive-1vLZ_I:focus-within, 
-.interactive-1vLZ_I:hover {
+.interactive-26HRN_:focus-within, 
+.interactive-26HRN_:hover {
   color: white;
   background-color: rgba(255, 255, 255, .19);
 }
@@ -4313,8 +4313,8 @@ border-top-color: #9b2742;
   background-color: transparent;
 }
 
-.text-md-normal-304U3g a,
-.text-sm-normal-3Zj3Iv a {
+.text-md-normal-2rFCH3 a,
+.text-sm-normal-AEQz4v a {
   color: #C5E384;
 }
 
@@ -4669,4 +4669,47 @@ border-top-color: #9b2742;
 
 .theme-dark .keyboardShortcutsModal-2CRmCm {
     background-color: transparent;
+}
+
+.stageListenerPill-1_QAPA,
+.audienceIconContainer-1xndyK {
+  background-color: rgba(0, 0, 0, .2);
+}
+
+
+.audienceIcon-2HoEJ2 {
+  color: white;
+}
+
+.textBadge-v9EW9y {
+  border: 4px solid transparent;
+}
+
+.container-3i3IzO {
+  background-color: rgba(0, 0, 0, .1);
+}
+
+.cta-1XhfrG {
+  color: #3ea6ff;
+}
+
+.checkIcon-3eAeN_, 
+.memberCount-2G9rxE {
+  border: 1px solid rgba(255, 255, 255, .2);
+  background-color: rgba(255, 255, 255, .2);
+}
+
+.optionButton-1W9f7G.selected-KQBgNS {
+  border: 2px solid black;
+  background-color: rgba(0, 0, 0, .2);
+}
+
+.container-1jQZ2U {
+  box-shadow: none;
+  background-color: #282828;
+  border: 1px solid rgba(255, 255, 255, .1);
+}
+
+.hljs {
+  background: rgba(255,255,255,.12);
 }
